@@ -1,6 +1,9 @@
 Revised Bullet control system.
 Revised Color setting system for Qt5 and Qt6
-Tab key now indents paragraph, not compatible with old Tomboy.
+Tab key now indents paragraph, not compatible with old Tomboy. Subject to revision.
 Revised PDF export, embedded fonts.
-Draft "file link" capability. Just type file:// then either click the link button, press Ctrl-L or continue typing a path and file name. Subject to revision.
+Draft "file link" capability. Just type file://Path_to_a_file or use the Right Click Menu to insert a link interactivly. Will open any file your systems knows how to open.
 Support for openssl 3.0 (compile with fpc323, require dev pkg on Debian)
+Better debug capability when using GitHub Sync.
+Fix to ensure Gnome is happy with Qt5/6 using -platform xcb
+Rename --kde-leftclick to --allow-leftclick because now useful under Gnome too.
